--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=21e181d89cb7597e452b9f98eab188b0",
+    "/css/app.css": "/css/app.css?id=c2caa10a66d2bc5bd544f6dc66771645"
 }
